--- a/web/login.html
+++ b/web/login.html
@@ -27,20 +27,14 @@
     <h1>顺风车智能调度</h1>
     <p class="subtitle">网页直连 Supabase 登录（HTTPS，无需自建后端）</p>
     <form id="loginForm">
-      <div id="configFields">
-        <label>Supabase 项目 URL</label>
-        <input type="url" id="supabaseUrl" placeholder="https://xxx.supabase.co" />
-        <label>Supabase Anon Key（公开密钥）</label>
-        <input type="text" id="supabaseAnon" placeholder="eyJhbG..." />
-      </div>
       <label>邮箱</label>
-      <input type="email" id="email" placeholder="admin@你的域名.com" autocomplete="username" />
+      <input type="email" id="email" placeholder="admin@test.com" autocomplete="username" />
       <label>密码</label>
       <input type="password" id="password" placeholder="密码" autocomplete="current-password" />
       <button type="submit" class="btn" id="btnSubmit">登录</button>
       <p id="err" class="err"></p>
     </form>
-    <p class="hint" id="hintText">在 Supabase 控制台 → Authentication → Users 里添加用户（邮箱+密码）；API 设置里复制 URL 与 anon public key。</p>
+    <p class="hint">Supabase URL 与密钥从 config（环境变量）自动读取；请在 Supabase 控制台添加用户（邮箱+密码）。</p>
   </div>
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
   <script>
@@ -50,28 +44,17 @@
   var STORAGE_SUPABASE_URL = "smartdiaodu_supabase_url";
   var STORAGE_SUPABASE_ANON = "smartdiaodu_supabase_anon_key";
   var form = document.getElementById("loginForm");
-  var supabaseUrlInput = document.getElementById("supabaseUrl");
-  var supabaseAnonInput = document.getElementById("supabaseAnon");
   var emailInput = document.getElementById("email");
   var passwordInput = document.getElementById("password");
   var btnSubmit = document.getElementById("btnSubmit");
   var errEl = document.getElementById("err");
 
   var cfg = typeof window.SMARTDIAODU_CONFIG !== "undefined" ? window.SMARTDIAODU_CONFIG : {};
-  var hasConfig = !!(cfg.supabaseUrl && cfg.supabaseAnonKey);
-  var configFieldsEl = document.getElementById("configFields");
-  var hintEl = document.getElementById("hintText");
-  if (hasConfig && configFieldsEl) {
-    configFieldsEl.style.display = "none";
-    if (hintEl) hintEl.textContent = "已从 config 读取 Supabase 配置，请输入邮箱和密码登录。";
-  } else {
-    if (typeof localStorage !== "undefined") {
-      supabaseUrlInput.value = localStorage.getItem(STORAGE_SUPABASE_URL) || cfg.supabaseUrl || "";
-      supabaseAnonInput.value = localStorage.getItem(STORAGE_SUPABASE_ANON) || cfg.supabaseAnonKey || "";
-    } else {
-      supabaseUrlInput.value = cfg.supabaseUrl || "";
-      supabaseAnonInput.value = cfg.supabaseAnonKey || "";
-    }
+  function getSupabaseUrl() {
+    return (typeof localStorage !== "undefined" && localStorage.getItem(STORAGE_SUPABASE_URL)) || cfg.supabaseUrl || "";
+  }
+  function getSupabaseAnon() {
+    return (typeof localStorage !== "undefined" && localStorage.getItem(STORAGE_SUPABASE_ANON)) || cfg.supabaseAnonKey || "";
   }
 
   function showErr(msg) {
@@ -81,13 +64,13 @@
 
   form.addEventListener("submit", function (e) {
     e.preventDefault();
-    var url = (supabaseUrlInput.value || cfg.supabaseUrl || "").trim();
-    var anon = (supabaseAnonInput.value || cfg.supabaseAnonKey || "").trim();
+    var url = getSupabaseUrl().trim();
+    var anon = getSupabaseAnon().trim();
     var email = (emailInput.value || "").trim();
     var password = passwordInput.value || "";
     showErr("");
-    if (!url) { showErr("请填写 Supabase 项目 URL 或在 config 中配置"); return; }
-    if (!anon) { showErr("请填写 Supabase Anon Key 或在 config 中配置"); return; }
+    if (!url) { showErr("未配置 Supabase URL，请在 Cloudflare 环境变量或 config.js 中设置 SUPABASE_URL"); return; }
+    if (!anon) { showErr("未配置 Supabase Anon Key，请在 Cloudflare 环境变量或 config.js 中设置 SUPABASE_ANON_KEY"); return; }
     if (!email) { showErr("请填写邮箱"); return; }
     if (!password) { showErr("请填写密码"); return; }
     btnSubmit.disabled = true;
